--- a/package.json
+++ b/package.json
@@ -15,10 +15,10 @@
     "eslint": "^6.8.0",
     "eslint-config-standard-with-typescript": "^11.0.1",
     "eslint-plugin-import": "^2.20.2",
+    "eslint-plugin-import-helpers": "^1.0.2",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.1",
-    "eslint-plugin-import-helpers": "^1.0.2",
     "git-commit-msg-linter": "^2.4.2",
     "husky": "^4.2.5",
     "jest": "^25.3.0",
@@ -44,7 +44,9 @@
   "dependencies": {
     "express": "^4.17.1",
     "module-alias": "^2.2.2",
-    "nodemon": "^2.0.3"
+    "nodemon": "^2.0.3",
+    "reflect-metadata": "^0.1.13",
+    "typeorm": "^0.2.24"
   },
   "engines": {
     "node": "12.x"
