--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,7 @@
 
 {
   "compilerOptions": {
+    "experimentalDecorators": true,
     "outDir": "dist",
     "module": "commonjs",
     "target": "es2020",
