--- a/package.json
+++ b/package.json
@@ -1,54 +1,34 @@
 {
-  "name": "iteacher-api",
-  "version": "0.0.0",
-  "main": "index.js",
-  "repository": "https://github.com/ProgramadorRanzinza/iteacher-architecture",
-  "author": "Luiz Pires <kw13code@gmail.com>",
-  "license": "MIT",
-  "devDependencies": {
-    "@types/express": "^4.17.6",
-    "@types/jest": "^25.2.1",
-    "@types/node": "^13.13.0",
-    "@typescript-eslint/eslint-plugin": "2",
-    "@typescript-eslint/parser": "^2.30.0",
-    "coveralls": "^3.0.11",
-    "eslint": "^6.8.0",
-    "eslint-config-standard-with-typescript": "^11.0.1",
-    "eslint-plugin-import": "^2.20.2",
-    "eslint-plugin-import-helpers": "^1.0.2",
-    "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^4.2.1",
-    "eslint-plugin-standard": "^4.0.1",
-    "git-commit-msg-linter": "^2.4.2",
-    "husky": "^4.2.5",
-    "jest": "^25.3.0",
-    "lint-staged": "^10.1.5",
-    "ts-jest": "^25.4.0",
-    "typescript": "^3.8.3"
-  },
+  "name": "iteacher",
+  "private": true,
+  "workspaces": [
+    "packages/**"
+  ],
   "scripts": {
     "start": "node dist/main/server.js",
-    "build": "rimraf dist && tsc -p tsconfig-build.json",
-    "debug": "nodemon -L --watch ./dist --inspect=0.0.0.0:9222 --nolazy ./dist/main/server.js",
-    "up": "yarn build && docker-compose up -d && yarn tsc -w",
-    "down": "docker-compose down",
+    "build": "tsc",
     "test": "jest --passWithNoTests --silent --noStackTrace --runInBand",
     "test:verbose": "jest --passWithNoTests --runInBand",
-    "test:unit": "yarn test --watch -c jest-unit-config.js",
+    "test:unit": "yarn test --watch",
     "test:integration": "yarn test --watch -c jest-integration-config.js",
     "test:staged": "yarn test --findRelatedTests",
     "test:ci": "yarn test --coverage",
     "test:coveralls": "yarn test:ci && coveralls < coverage/lcov.info"
   },
-  "dependencies": {
-    "express": "^4.17.1",
-    "module-alias": "^2.2.2",
-    "nodemon": "^2.0.3"
+  "devDependencies": {
+    "@types/node": "^14.0.1",
+    "@typescript-eslint/eslint-plugin": "^2.31.0",
+    "@typescript-eslint/parser": "^2.31.0",
+    "coveralls": "^3.0.11",
+    "eslint": "^7.0.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-prettier": "^3.1.3",
+    "git-commit-msg-linter": "^2.4.2",
+    "husky": "^4.2.5",
+    "jest": "^25.3.0",
+    "lint-staged": "^10.1.5",
+    "prettier": "^2.0.5",
+    "typescript": "^3.9.2"
   },
-  "engines": {
-    "node": "12.x"
-  },
-  "_moduleAliases": {
-    "@": "dist"
-  }
+  "dependencies": {}
 }
