--- a/.lintstagedrc.json
+++ b/.lintstagedrc.json
@@ -1,3 +1,3 @@
 {
-  "*.ts": ["eslint 'packages/**' --fix", "yarn core test"]
+  "packages/core/**/*.ts": ["eslint 'packages/**' --fix", "yarn core test"]
 }
