chore: adicionando eslint-plugin-import-helpers

--- a/.eslintrc
+++ b/.eslintrc
@@ -11,6 +11,19 @@
     "ecmaVersion": 2020,
     "sourceType": "module"
   },
-  "plugins": ["@typescript-eslint", "prettier"],
-  "rules": {}
+  "plugins": ["@typescript-eslint", "prettier", "eslint-plugin-import-helpers"],
+  "rules": {
+    "import-helpers/order-imports": [
+            "warn",
+            { // example configuration
+                "newlinesBetween": "always",
+                "groups": [
+                    "module",
+                    "/^@shared/",
+                    ["parent", "sibling", "index"]
+                ],
+                "alphabetize": { "order": "asc", "ignoreCase": true }
+            }
+        ]
+  }
 }
