--- a/package.json
+++ b/package.json
@@ -10,12 +10,13 @@
     "core": "yarn workspace @clean/core"
   },
   "devDependencies": {
-    "@types/node": "^14.0.1",
+    "@types/node": "^14.0.5",
     "@typescript-eslint/eslint-plugin": "^2.31.0",
     "@typescript-eslint/parser": "^2.31.0",
     "coveralls": "^3.0.11",
     "eslint": "^7.0.0",
     "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-import-helpers": "^1.0.2",
     "eslint-plugin-prettier": "^3.1.3",
     "git-commit-msg-linter": "^2.4.2",
     "husky": "^4.2.5",
@@ -25,6 +26,9 @@
     "typescript": "^3.9.2"
   },
   "dependencies": {
-    "@brazilian-utils/brazilian-utils": "^1.0.0-rc.7"
+    "@brazilian-utils/brazilian-utils": "^1.0.0-rc.7",
+    "pg": "^8.2.1",
+    "reflect-metadata": "^0.1.13",
+    "typeorm": "^0.2.25"
   }
 }
