--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,7 @@
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
     "forceConsistentCasingInFileNames": true,
-    "moduleResolution": "Node"
+    "moduleResolution": "Node",
   },
   "files": ["packages/core/core-env.d.ts"],
   "exclude": ["node_modules", "build", ".jest-cache", "packages/**/*.spec.ts"],
