--- a/packages/data-sources/package.json
+++ b/packages/data-sources/package.json
@@ -1,5 +1,10 @@
 {
   "name": "@clean/data-sources",
   "version": "1.0.0",
-  "license": "UNLICENSED"
+  "license": "UNLICENSED",
+  "dependencies": {
+    "mysql": "^2.18.1",
+    "reflect-metadata": "^0.1.13",
+    "typeorm": "^0.2.25"
+  }
 }
