fix: timezome configuration

--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "build": "tsc",
     "start:api": "node build/api/main.js",
     "start:api:watch": "nodemon -w build build/api/main.js",
-    "test": "TZ=UTC jest",
-    "coverage": "TZ=UTC jest --coverage",
+    "test": "jest",
+    "coverage": "jest --coverage",
     "db:migration:create": "typeorm migration:create",
     "db:migration:run": "typeorm migration:run",
     "db:migration:revert": "typeorm migration:revert"
