--- a/package.json
+++ b/package.json
@@ -1,34 +1,46 @@
 {
   "name": "iteacher",
+  "version": "1.0.0",
   "private": true,
-  "workspaces": [
-    "packages/**"
-  ],
   "scripts": {
-    "start": "node dist/main/server.js",
+    "format": "prettier --write **/*.{json,ts}",
+    "lint": "eslint **/*.ts",
+    "prebuild": "rm -rf build",
     "build": "tsc",
-    "test": "jest --passWithNoTests --silent --noStackTrace --runInBand",
-    "test:verbose": "jest --passWithNoTests --runInBand",
-    "test:unit": "yarn test --watch",
-    "test:integration": "yarn test --watch -c jest-integration-config.js",
-    "test:staged": "yarn test --findRelatedTests",
-    "test:ci": "yarn test --coverage",
-    "test:coveralls": "yarn test:ci && coveralls < coverage/lcov.info"
+    "start:api": "node build/api/main.js",
+    "start:api:watch": "nodemon -w build build/api/main.js",
+    "test": "jest",
+    "coverage": "jest --coverage",
+    "db:migration:create": "typeorm migration:create",
+    "db:migration:run": "typeorm migration:run",
+    "db:migration:revert": "typeorm migration:revert"
+  },
+  "dependencies": {
+    "@brazilian-utils/brazilian-utils": "^1.0.0-rc.7",
+    "fast-xml-parser": "^3.17.2",
+    "fastify": "^2.14.1",
+    "jsonwebtoken": "^8.5.1",
+    "nodemon": "^2.0.4",
+    "pg": "^8.2.1",
+    "pino-pretty": "^4.0.0",
+    "typeorm": "^0.2.25"
   },
   "devDependencies": {
-    "@types/node": "^14.0.1",
-    "@typescript-eslint/eslint-plugin": "^2.31.0",
-    "@typescript-eslint/parser": "^2.31.0",
-    "coveralls": "^3.0.11",
-    "eslint": "^7.0.0",
+    "@types/jest": "^25.2.2",
+    "@types/jsonwebtoken": "^8.5.0",
+    "@types/node": "^14.0.5",
+    "@typescript-eslint/eslint-plugin": "^3.0.0",
+    "@typescript-eslint/parser": "^3.0.0",
+    "eslint": "^7.1.0",
     "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-import-helpers": "^1.0.2",
     "eslint-plugin-prettier": "^3.1.3",
     "git-commit-msg-linter": "^2.4.2",
     "husky": "^4.2.5",
-    "jest": "^25.3.0",
-    "lint-staged": "^10.1.5",
+    "jest": "^26.0.1",
+    "lint-staged": "^10.2.6",
     "prettier": "^2.0.5",
-    "typescript": "^3.9.2"
-  },
-  "dependencies": {}
+    "ts-jest": "^26.0.0",
+    "typescript": "^3.9.3"
+  }
 }
