--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -4,11 +4,37 @@
   "service": "application",
   "workspaceFolder": "/workspace",
   "settings": {
-    "terminal.integrated.shell.linux": "/bin/bash"
+    "terminal.integrated.shell.linux": "/bin/zsh"
   },
   "extensions": [
     "dbaeumer.vscode-eslint",
-    "prettier.prettier-vscode"
+    "prettier.prettier-vscode",
+    "vsls-contrib.codetour",
+    "naumovs.color-highlight",
+    "jzmstrjp.color-the-tag-name",
+    "editorconfig.editorconfig",
+    "usernamehw.errorlens",
+    "rubbersheep.gi",
+    "donjayamanne.git-extension-pack",
+    "psykosoldi3r.vscode-git-flow",
+    "donjayamanne.githistory",
+    "cschleiden.vscode-github-actions",
+    "formulahendry.github-actions",
+    "github.vscode-pull-request-github",
+    "codezombiech.gitignore",
+    "eamodio.gitlens",
+    "sainnhe.gruvbox-material",
+    "yzhang.markdown-all-in-one",
+    "christian-kohler.path-intellisense",
+    "natqe.reload",
+    "mutantdino.resourcemonitor",
+    "kisstkondoros.typelens",
+    "pmneo.tsimporter",
+    "visualstudioexptteam.vscodeintellicode",
+    "wakatime.vscode-wakatime",
+    "redhat.vscode-yaml"
+
+
   ],
   "remoteUser": "node"
 }
