chore: add ejs and downgrade eslint

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -6,9 +6,6 @@
   "settings": {
     "terminal.integrated.shell.linux": "/bin/zsh"
   },
-  "extensions": [
-    "dbaeumer.vscode-eslint",
-    "prettier.prettier-vscode"
-  ],
+  "extensions": ["dbaeumer.vscode-eslint", "prettier.prettier-vscode"],
   "remoteUser": "node"
 }
