--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "@brazilian-utils/brazilian-utils": "^1.0.0-rc.7",
+    "ejs": "^3.1.3",
     "fast-xml-parser": "^3.17.2",
     "fastify": "^2.14.1",
     "jsonwebtoken": "^8.5.1",
@@ -26,12 +27,13 @@
     "typeorm": "^0.2.25"
   },
   "devDependencies": {
+    "@types/ejs": "^3.0.4",
     "@types/jest": "^25.2.2",
     "@types/jsonwebtoken": "^8.5.0",
     "@types/node": "^14.0.5",
     "@typescript-eslint/eslint-plugin": "^3.0.0",
     "@typescript-eslint/parser": "^3.0.0",
-    "eslint": "^7.1.0",
+    "eslint": "^6",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-import-helpers": "^1.0.2",
     "eslint-plugin-prettier": "^3.1.3",
