--- a/.devcontainer/.env.development
+++ b/.devcontainer/.env.development
@@ -1,10 +1,10 @@
 TZ=UTC
 
-POSTGRES_USER=kandrus
-POSTGRES_PASSWORD=123456
+POSTGRES_USER=user
+POSTGRES_PASSWORD=pass
 POSTGRES_DB=iteacher
 
 DB_HOST=database
-DB_USER=kandrus
-DB_PWD=123456
-DB_NAME=iteacher
+DB_USER=user
+DB_PWD=pass
+DB_NAME=development
