--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   },
   "devDependencies": {
     "@types/ejs": "^3.0.4",
+    "@types/faker": "^4.1.12",
     "@types/jest": "^25.2.2",
     "@types/jsonwebtoken": "^8.5.0",
     "@types/node": "^14.0.5",
@@ -37,6 +38,7 @@
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-import-helpers": "^1.0.2",
     "eslint-plugin-prettier": "^3.1.3",
+    "faker": "^4.1.0",
     "git-commit-msg-linter": "^2.4.2",
     "husky": "^4.2.5",
     "jest": "^26.0.1",
