refactor: new generic name database

--- a/.devcontainer/.env.development
+++ b/.devcontainer/.env.development
@@ -1,9 +1,11 @@
+# Server config
 TZ=UTC
 
 POSTGRES_USER=user
 POSTGRES_PASSWORD=pass
-POSTGRES_DB=iteacher
+POSTGRES_DB=development
 
+# App config
 DB_HOST=database
 DB_USER=user
 DB_PWD=pass
