--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -13,7 +13,7 @@ services:
     ports:
       - 3000:3000
     volumes:
-      - ..:/workspace:cached
+      - ..:/iteacher
     links:
       - database
 
