--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -1,5 +1,4 @@
 version: '3'
-
 services:
   application:
     user: node
@@ -13,7 +12,7 @@ services:
     ports:
       - 3000:3000
     volumes:
-      - ..:/iteacher
+      - ..:/iteacher:cached
     links:
       - database
 
