Feature/teacher schedule (#4)
* chore: add git-flow and zsh

* refactor: remove gitflow

* feat: clean cpf

* chore: add extensions and zsh

* refactor: edição no pre-push

* refactor: adaptação a nova arquitura

* refactor: remoção das extensions desnecessárias

* refactor: adequação a nova regra de nomenclatura

* refactor: edit format command

* refactor: remove zsh and oh-my-zsh

* chore: add ejs and downgrade eslint

* refactor: rename files

* feat: ensure CreateUserInteractor create new User

* refactor: rename files

* refactor: rename interfaces

* chore: add config files

* feat: add EJS template engine

* refactor: rename interfaces

* feat: add EJS template engine

* refactor: rename interfaces

* refactor: edit exclude files

* refactor: rename user to auth

* feat: add entities

* refactor: remove file

* feat: add entities

* test: new variable value for better understanding test

* refactor: remove imports

* refactor: add new parameter in test command

* feat: add teacher-schedule

* refactor: adicionando dados de conexão genéricos

* Update .devcontainer/Dockerfile

Co-authored-by: Matheus Albino <matheusalbino@users.noreply.github.com>

* Update package.json

Co-authored-by: Matheus Albino <matheusalbino@users.noreply.github.com>

* Update .devcontainer/docker-compose.yml

Co-authored-by: Matheus Albino <matheusalbino@users.noreply.github.com>

* Update src/adapters/ejs.adapter.ts

Co-authored-by: Matheus Albino <matheusalbino@users.noreply.github.com>

* chore: add TOKEN_SECRET in env file

* refactor: o comando é usado para que se não tiver testes no commit eles passem o padrão é que de red

* Update src/core/storage/files.ts

Co-authored-by: Matheus Albino <matheusalbino@users.noreply.github.com>

* Update src/core/storage/files.ts

Co-authored-by: Matheus Albino <matheusalbino@users.noreply.github.com>

* Update src/core/subject/requisits/requisits.enum.ts

--- a/.devcontainer/.env.development
+++ b/.devcontainer/.env.development
@@ -1,10 +1,15 @@
+# Server config
 TZ=UTC
 
 POSTGRES_USER=user
 POSTGRES_PASSWORD=pass
 POSTGRES_DB=development
 
+# App config
 DB_HOST=database
 DB_USER=user
 DB_PWD=pass
 DB_NAME=development
+
+TOKEN_SECRET=YOUR_TOKEN_SECRET
+DOMAIN=iteacher.test
