--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build": "tsc",
     "start:api": "node build/api/main.js",
     "start:api:watch": "nodemon -w build build/api/main.js",
-    "test": "jest",
+    "test": "jest --passWithNoTests",
     "coverage": "jest --coverage",
     "db:migration:create": "typeorm migration:create",
     "db:migration:run": "typeorm migration:run",
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "@brazilian-utils/brazilian-utils": "^1.0.0-rc.7",
+    "ejs": "^3.1.3",
     "fast-xml-parser": "^3.17.2",
     "fastify": "^2.14.1",
     "jsonwebtoken": "^8.5.1",
@@ -26,15 +27,18 @@
     "typeorm": "^0.2.25"
   },
   "devDependencies": {
+    "@types/ejs": "^3.0.4",
+    "@types/faker": "^4.1.12",
     "@types/jest": "^25.2.2",
     "@types/jsonwebtoken": "^8.5.0",
     "@types/node": "^14.0.5",
     "@typescript-eslint/eslint-plugin": "^3.0.0",
     "@typescript-eslint/parser": "^3.0.0",
-    "eslint": "^7.1.0",
+    "eslint": "^6",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-import-helpers": "^1.0.2",
     "eslint-plugin-prettier": "^3.1.3",
+    "faker": "^4.1.0",
     "git-commit-msg-linter": "^2.4.2",
     "husky": "^4.2.5",
     "jest": "^26.0.1",
