--- a/package.json
+++ b/package.json
@@ -17,12 +17,13 @@
   },
   "dependencies": {
     "@brazilian-utils/brazilian-utils": "^1.0.0-rc.7",
+    "dotenv": "^8.2.0",
     "ejs": "^3.1.3",
     "fast-xml-parser": "^3.17.2",
     "fastify": "^2.14.1",
     "jsonwebtoken": "^8.5.1",
+    "mysql": "^2.18.1",
     "nodemon": "^2.0.4",
-    "pg": "^8.2.1",
     "pino-pretty": "^4.0.0",
     "typeorm": "^0.2.25"
   },
