--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "lint": "eslint **/*.ts",
     "prebuild": "rm -rf build",
     "build": "tsc",
-    "start:api": "node build/api/main.js",
+    "start:api": "tsnd --respawn --exit-child --debounce --clear --transpile-only --inspect --no-notify src/api/main.ts",
     "start:api:watch": "nodemon -w build build/api/main.js",
     "test": "jest --passWithNoTests",
     "test:unit": "jest --passWithNoTests -c jest-unit-config.js",
@@ -19,22 +19,26 @@
   },
   "dependencies": {
     "@brazilian-utils/brazilian-utils": "^1.0.0-rc.7",
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "ejs": "^3.1.3",
+    "express": "^4.17.1",
     "fast-xml-parser": "^3.17.2",
     "fastify": "^2.14.1",
     "jsonwebtoken": "^8.5.1",
-    "mysql": "^2.18.1",
     "nodemon": "^2.0.4",
+    "pg": "^8.3.0",
     "pino-pretty": "^4.0.0",
     "typeorm": "^0.2.25"
   },
   "devDependencies": {
     "@types/ejs": "^3.0.4",
+    "@types/express": "^4.17.7",
     "@types/faker": "^4.1.12",
     "@types/jest": "^25.2.2",
     "@types/jsonwebtoken": "^8.5.0",
     "@types/node": "^14.0.5",
+    "@types/pg": "^7.14.4",
     "@types/supertest": "^2.0.10",
     "@typescript-eslint/eslint-plugin": "^3.0.0",
     "@typescript-eslint/parser": "^3.0.0",
@@ -50,6 +54,7 @@
     "prettier": "^2.0.5",
     "supertest": "^4.0.2",
     "ts-jest": "^26.0.0",
+    "ts-node-dev": "^1.0.0-pre.56",
     "typescript": "^3.9.3"
   }
 }
