--- a/package.json
+++ b/package.json
@@ -1,61 +1,27 @@
 {
   "name": "iteacher",
   "version": "1.0.0",
+  "main": "index.js",
+  "repository": "https://github.com/ProgramadorRanzinza/ITeacher.git",
+  "author": "Luiz Pires <kw13code@gmail.com>",
+  "license": "MIT",
   "private": true,
+  "workspaces": [
+    "packages/*"
+  ],
   "scripts": {
-    "format": "prettier --write **/*.{json,ts}",
-    "lint": "eslint **/*.ts",
-    "prebuild": "rm -rf build",
-    "build": "tsc",
-    "start:api": "tsnd --respawn --exit-child --debounce --clear --transpile-only --inspect --no-notify src/api/main.ts",
-    "start:api:watch": "nodemon -w build build/api/main.js",
-    "test": "jest --passWithNoTests",
-    "test:unit": "jest --passWithNoTests -c jest-unit-config.js",
-    "test:integration": "jest --passWithNoTests -c jest-integration-config.js",
-    "coverage": "jest --coverage",
-    "db:migration:create": "typeorm migration:create",
-    "db:migration:run": "typeorm migration:run",
-    "db:migration:revert": "typeorm migration:revert"
+    "test": "jest",
+    "build": "tsc"
   },
   "dependencies": {
-    "@brazilian-utils/brazilian-utils": "^1.0.0-rc.7",
-    "cors": "^2.8.5",
-    "dotenv": "^8.2.0",
-    "ejs": "^3.1.3",
-    "express": "^4.17.1",
-    "fast-xml-parser": "^3.17.2",
-    "fastify": "^2.14.1",
-    "jsonwebtoken": "^8.5.1",
-    "nodemon": "^2.0.4",
-    "pg": "^8.3.0",
-    "pino-pretty": "^4.0.0",
-    "reflect-metadata": "^0.1.13",
-    "typeorm": "^0.2.25"
+    "@iteacher/eslint-config": "*",
+    "@types/jest": "24.9.0",
+    "jest": "24.9.0",
+    "ts-jest": "^26.1.3",
+    "typescript": "^3.9.7"
   },
   "devDependencies": {
-    "@types/ejs": "^3.0.4",
-    "@types/express": "^4.17.7",
-    "@types/faker": "^4.1.12",
-    "@types/jest": "^25.2.2",
-    "@types/jsonwebtoken": "^8.5.0",
-    "@types/node": "^14.0.5",
-    "@types/pg": "^7.14.4",
     "@types/supertest": "^2.0.10",
-    "@typescript-eslint/eslint-plugin": "^3.0.0",
-    "@typescript-eslint/parser": "^3.0.0",
-    "eslint": "^6",
-    "eslint-config-prettier": "^6.11.0",
-    "eslint-plugin-import-helpers": "^1.0.2",
-    "eslint-plugin-prettier": "^3.1.3",
-    "faker": "^4.1.0",
-    "git-commit-msg-linter": "^2.4.2",
-    "husky": "^4.2.5",
-    "jest": "^26.0.1",
-    "lint-staged": "^10.2.6",
-    "prettier": "^2.0.5",
-    "supertest": "^4.0.2",
-    "ts-jest": "^26.0.0",
-    "ts-node-dev": "^1.0.0-pre.56",
-    "typescript": "^3.9.3"
+    "supertest": "^4.0.2"
   }
 }
