--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,16 +2,17 @@
   "compilerOptions": {
     "target": "ES2019",
     "module": "CommonJS",
+    "lib": ["ES6"],
+    "allowJs": true,
     "sourceMap": true,
-    "strict": true,
-    "outDir": "build/",
+    "removeComments": true,
+    "resolveJsonModule": true,
+    // "strict": true,
     "esModuleInterop": true,
+    "outDir": "build/",
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
     "forceConsistentCasingInFileNames": true,
     "moduleResolution": "Node"
-  },
-  "files": ["src/env.d.ts"],
-  "exclude": ["node_modules", "build", ".jest-cache"],
-  "include": ["src/**/*.ts"]
+  }
 }
