refactor: edit command test

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "packages/*"
   ],
   "scripts": {
-    "test": "jest",
+    "test:unit": "jest",
     "build": "tsc"
   },
   "dependencies": {
