--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -10,7 +10,7 @@ jobs:
       - uses: actions/checkout@v2
       - run: yarn
       - run: yarn lint
-      - run: yarn coverage
+      - run: yarn test:coverage
         env:
           CI: true
       - uses: codecov/codecov-action@v1
