--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@brazilian-utils/brazilian-utils": "^1.0.0-rc.7",
+    "config": "^3.3.1",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
@@ -21,6 +22,7 @@
     "typeorm": "^0.2.25"
   },
   "devDependencies": {
+    "@types/config": "^0.0.36",
     "@types/express": "^4.17.7",
     "@types/jsonwebtoken": "^8.5.0",
     "@types/node": "^14.0.5",
