--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -29,8 +29,19 @@ RUN apt-get update && \
   export DEBIAN_FRONTEND=noninteractive && \
   apt-get -y install --no-install-recommends git-flow nano
 
-
 USER $USERNAME
+
+# Uses "Spaceship" theme with some customization. Uses some bundled plugins and installs some more from github
+RUN sh -c "$(wget -O- https://github.com/deluan/zsh-in-docker/releases/download/v1.1.2/zsh-in-docker.sh)" -- \
+  -t https://github.com/denysdovhan/spaceship-prompt \
+  -a 'SPACESHIP_PROMPT_ADD_NEWLINE="false"' \
+  -a 'SPACESHIP_PROMPT_SEPARATE_LINE="false"' \
+  -p git \
+  -p ssh-agent \
+  -p zsh-autosuggestions \
+  -p zsh-completions \
+  -p https://github.com/zsh-users/zsh-autosuggestions \
+  -p https://github.com/zsh-users/zsh-completions
 
 RUN npm install -g yarn
 
